                    *************************
                    
                    Changes in afex Version 1.0-x
                    Released July 2021
                    
    Significant User Visible Changes and New Features
    
    o   ANOVA objects do not by default contain the aov slot any more
    
    o   emmeans() for ANOVA now uses multivariate model as default


                    *************************
                    ** afex VERSION 0.28-x **
                    *************************
                    
                    Changes in afex Version 0.28-x
                    Released August 2020
                    
    Significant User Visible Changes and New Features
    
    o   Added residuals() and fitted() methods for afex_aov objects. 
        Thanks to a pull request by Mattan S. Ben-Shachar.
    
    o   Added new data set, stroop, which contains the accuracy and response 
        time data from Lin, Saunders, Friese, Evans, and Inzlicht (2020, Psych. 
        Science, https://doi.org/10.1177/0956797620904990).
        
    o   Added new vignette, "Analysis of Accuracy Data using ANOVA and binomial 
        GLMMs" which uses the new Stroop data.
        
    o   afex_plot introduction vignette and help page now refer to 
        ggbeeswarm::geom_quasirandom as a good alternative to the bee swarm 
        plot.
        
    o   Updated the mixed model vignette which now discusses going from the 
        maximal to the final model, singular fits, and is based on latest lme4.
        
    o   Mixed model chapter uses better layout and added final reference.

    Bugfixes (most bugs in this updated were reported by Frantisek Bartos)

    o   objects estimated with mixed(..., all_fit = TRUE) should now work
        again with emmeans.
        
    o   afex_plot() works with mixed models estimated with mixed(..., type = 2) 
        (i.e., mixed models with Type II sums of squares).
        